k8s/eks/appmesh-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    mesh: default-mesh
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
