k8s/eks/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sample
  name: sample-express-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: sample-express-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sample-express-api
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: sample-express-api
      containers:
        - name: sample-express-api
          image: [URL]
          resources:
            limits:
              cpu: "0.2"
              memory: "200Mi"
            requests:
              cpu: "0.2"
              memory: "200Mi"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  namespace: sample
  name: sample-express-api-service
spec:
  selector:
    app.kubernetes.io/name: sample-express-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sample
  name: sample-express-api-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-express-api-service
                port:
                  number: 80
